version/0.20/_sources/api/solver/_autosummary/settings/runge_kutta.rst.txt
:orphan:

.. _runge_kutta:

runge_kutta
===========

.. autoclass:: ansys.fluent.core.solver.settings_241.runge_kutta.runge_kutta
    :show-inheritance:

.. rubric:: Attributes

================================================   ==========================================================

Attribute                                                                                             Summary

================================================   ==========================================================
:ref:`two_stage <two_stage>`                                     Enable/disable two-stage Runge-Kutta scheme.

:ref:`default_multi_stage <default_multi_stage>`       Enable/disable default multi-stage Runge-Kutta scheme.

================================================   ==========================================================

.. rubric:: Included in:

========================================================   ===========================================

Parent                                                                                         Summary

========================================================   ===========================================
:ref:`fast_transient_settings <fast_transient_settings>`       Enter the fast transient settings menu.

========================================================   ===========================================

